@@ -5,6 +5,7 @@ to Subversion revision numbers (rXXXXX).
 WinMerge 2.9.1.2
   BugFix: Version Control filter did not match all VSS files (#1881186)
   BugFix: Fix showing differences in the end of the line (#1883409, #1962816)
+  BufFix: Fix command line paths in parentheses ending with "\" (#1963523)
   Translation updates:
   - Bulgarian (#1957434)
   - Croatian (#1958283)
